--- a/include/css/main.css
+++ b/include/css/main.css
@@ -138,37 +138,8 @@ body ,ol ,ul ,li ,a ,img ,h1 ,h2 ,h3 ,h4 ,h5 ,i ,dd ,tt ,input ,textarea {
     display:inline-block;
     vertical-align: top;
     color:#959595;
-    width:25px;
-    height:25px;
-    line-height:25px;
-    text-align: center;
-    cursor:pointer;
-    font-size:15px;
 }
-.menu_lang:hover{
-    width:23px;
-    height:23px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    border:1px solid #959595;
-    -webkit-box-shadow: 0px 0px 5px 0px #959595;
-    -moz-box-shadow: 0px 0px 5px 0px #959595;
-    box-shadow: 0px 0px 5px 0px #959595;
-}
-.menu_lang:active{
-    width:23px;
-    height:23px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    background-color:#e5e5e5;
-    border:1px solid #959595;
-    -webkit-box-shadow:none;
-    -moz-box-shadow:none;
-    box-shadow:none;
-    color:#bbb;
-}
+
 .main{
     background-color:black;
     width:100%;
@@ -460,6 +431,38 @@ body ,ol ,ul ,li ,a ,img ,h1 ,h2 ,h3 ,h4 ,h5 ,i ,dd ,tt ,input ,textarea {
     margin:0 auto;
     padding:0 24px 80px 24px;
     text-align: left;
+    font-size:24px;
+    text-align:left;
+}
+.single_content ul{
+    max-width:900px;
+    margin-top:-75px;
+}
+.single_content ul li{
+    max-width:600px;
+    font-size:20px;
+    list-style-type:disc;
+}
+.single_content h1{
+    font-size:30px;
+    font-weight:bold;
+    max-width:976px;
+}
+.single_content h2{
+    font-size:28px;
+    font-weight:bold;
+    max-width:976px;
+}
+.single_content h3{
+    font-size:26px;
+    font-weight:bold;
+    max-width:976px;
+}
+.single_content ul li{
+    max-width:976px;
+    font-size:20px;
+    text-align:left;
+    list-style-type:disc;
 }
 .single_content p img{
     text-align:center;
